Small fixes. Updated alignment section in grid documentation

--- a/packages/mq/src/mixins.sass
+++ b/packages/mq/src/mixins.sass
@@ -118,4 +118,4 @@
   @each $key, $value in $map
     &#{$key}
       +mq-whether-to-respond-both($responsive)
-        $property: $value
+        #{$property}: $value
